@@ -15,6 +15,7 @@ This release marks the one year anniversary of BRL-CAD being released
 as Open Source software.  Thank you to everyone for your support and
 contributions.
 
+* added support for -F framebuffer option to fb-bw - Sean Morrison
 * reid mged command, recursively assign region IDs - Sean Morrison
 * remat mged command, recursively assign a material ID - Sean Morrison
 * get_regions mged command, list assembly regions - Sean Morrison
